--- a/countries-api/index.html
+++ b/countries-api/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head lang="en" dir="ltr"><meta name="viewport" content="width=device-width,initial-scale=1"><meta charset="UTF-8"/><title>Countries API</title><script defer="defer" src="bundle.f6e30fe55f8fbe5f28b6.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html><html lang="en"><head dir="ltr"><meta name="viewport" content="width=device-width,initial-scale=1"><meta charset="UTF-8"/><title>Countries API</title><script defer="defer" src="bundle.572f05031fcfe0c33c52.js"></script></head><body><div id="root"></div></body></html>
